[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-memory-guard"
version = "0.1.0"
description = "CLI tool to check GPU VRAM before loading AI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dmytro Romanov", email = "casteldazur@gmail.com"}
    ]
    classifiers = [
        "Development Status :: 3 - Alpha",
            "Intended Audience :: Developers",
                "License :: OSI Approved :: MIT License",
                    "Programming Language :: Python :: 3",
                        "Programming Language :: Python :: 3.8",
                            "Programming Language :: Python :: 3.9",
                                "Programming Language :: Python :: 3.10",
                                    "Programming Language :: Python :: 3.11",
                                        "Programming Language :: Python :: 3.12",
                                            "Topic :: System :: Hardware",
                                                "Topic :: Scientific/Engineering :: Artificial Intelligence",
                                                ]
                                                keywords = ["gpu", "vram", "memory", "ai", "llm", "cuda", "nvidia", "oom"]

                                                [project.optional-dependencies]
                                                pynvml = ["pynvml>=11.0.0"]

                                                [project.scripts]
                                                gpu-guard = "gpu_guard:main"

                                                [project.urls]
                                                Homepage = "https://github.com/CastelDazur/gpu-memory-guard"
                                                Repository = "https://github.com/CastelDazur/gpu-memory-guard"
                                                Issues = "https://github.com/CastelDazur/gpu-memory-guard/issues"
